Style: fixed spacing in kanban project selector

--- a/resources/assets/less/app/kanban.less
+++ b/resources/assets/less/app/kanban.less
@@ -145,7 +145,7 @@
     }
 
     a {
-      padding: 3px 12px;
+      padding: 4px 12px;
       text-decoration: none;
       color: #3B4252;
       line-height: 100%;
